--- a/links/clan.html
+++ b/links/clan.html
@@ -33,7 +33,13 @@
 					<ul>
 						<li><a href="./fundador.html">Fundador</a></li>
 						<li><a href="./historiascout.html">Historia</a></li>
-						<li><a href="./tecnica.html">Técnica Scout</a></li>
+						<li><a href="#">Técnica Scout</a>
+							<ul>
+								<li><a href="./nudos.html">Nudos</a></li>
+								<li><a href="./amarres.html">Amarres</a></li>
+								<li><a href="./campismo.html">Campismo</a></li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 				<li><a href="../index.html">Novedades y Eventos</a></li>
@@ -51,7 +57,7 @@
 			</div>
 			<div class="verticalcontainer">
 				<div class="switcher">
-					<span><button class="cambio" onclick="window.location='./tropa.html'">Tropa</button></span><span><h1 class="titulomayor">Clan de Rovers Peregrinos</h1></span>
+					<span><button class="cambio" onclick="window.location='./tropa.html'">Tropa</button></span><span><h1 class="titulomayor">Clan de Rovers Peregrinos</h1></span><span><button class="cambio" style="opacity:0; cursor: none;"></button></span>
 				</div>
 				<h2 class="subtitulomayor">¡Volando sin fronteras!</h2>
 				<div class="presentacion">
