--- a/links/familia.html
+++ b/links/familia.html
@@ -33,7 +33,13 @@
 					<ul>
 						<li><a href="./fundador.html">Fundador</a></li>
 						<li><a href="./historiascout.html">Historia</a></li>
-						<li><a href="./tecnica.html">Técnica Scout</a></li>
+						<li><a href="#">Técnica Scout</a>
+							<ul>
+								<li><a href="./nudos.html">Nudos</a></li>
+								<li><a href="./amarres.html">Amarres</a></li>
+								<li><a href="./campismo.html">Campismo</a></li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 				<li><a href="../index.html">Novedades y Eventos</a></li>
@@ -51,7 +57,7 @@
 			</div>
 			<div class="verticalcontainer">
 				<div class="switcher">
-					<span><h1 class="titulomayor">Familia de Cachorros Soro</h1></span><span><button class="cambio" onclick="window.location='./manada.html'">Manada</button></span>
+					<span><button class="cambio" style="opacity: 0; cursor: none;" >Manada</button></span><span><h1 class="titulomayor">Familia de Cachorros Soro</h1></span><span><button class="cambio" onclick="window.location='./manada.html'">Manada</button></span>
 				</div>
 				<p class="subtitulomayor">¡Tras la huella de un sueño!</p>
 				<div class="presentacion">
@@ -88,7 +94,7 @@
 
 					<p>Normalmente la jefe que los dirige se llama Raksha, la formación que usan al momento de formar en grupo tiene forma de el círculo al la mano izquierda del Jefe de grupo, es cubierta por los Webelos y su jefe debe ir al centro. Los cachorros saludan con dos dedos pegados, esto como símbolo de que sus ojos y oídos aún no se han abierto, una etapa común en los cachorros de lobo en la naturaleza.</p>
 
-					<p>Dentro de la familia de cachorros, existen pequeños equipos llamados camadas, conformados por 3 cachorros, y son llamados como animales con diminutivos por ejemplo: Ardillitas, conejitos, perritos, entre otros. Sus adelantos consisten  en insignias en forma de rombos  con 5 colores, amarillo, violeta, rojo, verde y azul formando una estrella y se cosen en la manga izquierda de la camisa , su insignia mayor es el Gnomo dorado. El cuaderno que llevan tiene de nombre pegotero y se decora con pedazos de papel de colores, además, lo cachorros decoran una gran sabana, donde se plasma la historia fantástica que viven.</p>
+					<p>Dentro de la familia de cachorros, existen pequeños equipos llamados camadas, conformados por 3 a 5 cachorros, y son llamados como animales con diminutivos por ejemplo: Ardillitas, conejitos, perritos, entre otros. Sus adelantos consisten  en insignias en forma de rombos  con 5 colores, amarillo, violeta, rojo, verde y azul formando una estrella y se cosen en la manga izquierda de la camisa , su insignia mayor es el Gnomo dorado. El cuaderno que llevan tiene de nombre pegotero y se decora con pedazos de papel de colores, además, lo cachorros decoran una gran sabana, donde se plasma la historia fantástica que viven.</p>
 				</div>
 				<div class="patronoracion">
 					<div class="patrono">
@@ -99,7 +105,7 @@
 							<h2>Oración del Cachorro</h2>
 						<p>Oh dulce y buen señor mío,<br>
 							enséñame a cuidar los bosques que me dan vida,<br>
-							a ser buenos con mi familia<br>
+							a ser bueno con mi familia<br>
 							y a amarte cada día más.<br>
 							San Fransisco de Asis,<br>
 							<i>Rogad por todos los cachorros y lobatos del mundo.</i>
