--- a/links/historia.html
+++ b/links/historia.html
@@ -33,7 +33,13 @@
 					<ul>
 						<li><a href="./fundador.html">Fundador</a></li>
 						<li><a href="./historiascout.html">Historia</a></li>
-						<li><a href="./tecnica.html">Técnica Scout</a></li>
+						<li><a href="#">Técnica Scout</a>
+							<ul>
+								<li><a href="./nudos.html">Nudos</a></li>
+								<li><a href="./amarres.html">Amarres</a></li>
+								<li><a href="./campismo.html">Campismo</a></li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 				<li><a href="../index.html">Novedades y Eventos</a></li>
@@ -67,7 +73,7 @@
 						<li><a href="#prisabat">¡La Primer Sabatina!</a></li>
 						<li><a href="#campuno">Campamento N°1</a></li>
 						<li><a href="#sede">Sede Actual</a></li>
-						<li><a href="#ECS">Encuentro de Culturas Scout</a></li>
+						<li><a href="#pripañoleta">La primer pañoleta del grupo</a></li>
 					</ul>
 				</div>
 				<div class="historia">
@@ -86,7 +92,7 @@
 					<p>Las ramas encontradas en el Grupo Scout Halcones 371 son: <a href="./familia.html" class="familia">Familia</a>, <a href="./manada.html" class="manada">Manada</a>, <a href="./aldea.html" class="aldea">Aldea</a>, <a href="./tropa.html" class="tropa">Tropa</a>, <a href="./clan.html" class="clan">Clan</a> y <a href="#" class="jefatura">Jefatura</a>, cada una de ellas ha sido bautizada con el nombre de una especie de halcón. La Familia de cachorros fue bautizada como “Soro” (Halcón emplumado); la Manada de Lobatos fue bautizada como “Maori” (Halcón perseverante); la Aldea de Webelos fue bautizada como “Yággar” (Halcón leal); La Tropa de Scouts fue bautizada como “Macagua” (Halcón cazador); El Clan de Rovers fue bautizada como “Peregrino” (Halcón solitario); finalmente, la Jefatura fue bautizada como “Falcon” (Familia de Halcones).</p>
 
 					<h2 id="pañoleta">La Pañoleta</h2>
-					<p>La pañoleta del Grupo, que lo identifica a nivel mundial, tiene un fondo <span class="jefatura">verde oliva</span>, que representa nuestros campos en donde se siembra la semilla del escultismo y se ve reflejado en la Jefatura; en el borde de la pañoleta se encuentran cintas de color rojo, azul, amarillo y verde, que representan el color de cada rama; próximo al extremo central de la pañoleta se encuentra bordado en hilos dorados el nombre “HALCONES 371”, denotando con ese hilo dorado que el Grupo es un Tesoro muy preciado, los números significan: 3: los principios y las virtudes scout, 7:  número de Dios, los días de la creación y 1: los mejores, siempre los primeros y la excelencia.</p>
+					<p>La pañoleta del Grupo, que lo identifica a nivel mundial, tiene un fondo <span class="jefatura" style="text-decoration: underline;">Verde Oliva</span>, que representa nuestros campos en donde se siembra la semilla del escultismo y se ve reflejado en la Jefatura; en el borde de la pañoleta se encuentran cintas de color rojo, azul, amarillo y verde, que representan el color de cada rama; próximo al extremo central de la pañoleta se encuentra bordado en hilos dorados el nombre “<span class="manada">HALCONES 371</span>”, denotando con ese hilo dorado que el Grupo es un Tesoro muy preciado, los números significan: <span class="manada">3</span>: los principios y las virtudes scout, <span class="manada">7</span>:  número de Dios, los días de la creación y <span class="manada">1</span>: los mejores, siempre los primeros y la excelencia.</p>
 					<h3 class="tropa">El Verde:</h3><p>
 						Es la semilla del escultismo, el verde de la naturaleza y es representado por nuestros scouts (troperos) quienes son la columna vertebral del grupo y la esperanza de un mundo mejor.
 					</p>
@@ -131,9 +137,8 @@
 				<!-- Aki va el google maps -->
 				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d995.7154591949923!2d-76.54135411234708!3d3.3839121011471005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xaf42d016b952ce34!2sParque%20de%20La%20Alqueria!5e0!3m2!1ses!2sco!4v1592537270867!5m2!1ses!2sco" width="600" height="450" frameborder="0" style="border:0; border-radius: 5px; box-shadow: 0 2px 8px black;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 				<div class="historia">
-					<h2 id="ECS">¡Vamos al ECS!</h2>
-					<p>Para el año 2015 una pequeña delegación del grupo participó en el Encuentro de Culturas Scout (ECS) en Amalfi, los años posteriores 2016 y 2017 participamos en los ECS de Coveñas y Guatapé como grupo, siempre destacamos por nuestra alegría y buen trabajo como grupo. Hoy somos una gran familia y esperamos seguir creciendo para llevar el escultismo a muchas vidas.
-					</p>
+					<h2 id="pripañoleta">La primer pañoleta del grupo</h2>
+					<p>La primer pañoleta del grupo fue otorgada a la tropera <i>Mónica Serna</i> y la cachorra <i>Luisa</i> Granados</p>
 				</div>
 			</div>
 			<div class="flordelis">
