--- a/links/historiascout.html
+++ b/links/historiascout.html
@@ -33,7 +33,13 @@
 					<ul>
 						<li><a href="./fundador.html">Fundador</a></li>
 						<li><a href="./historiascout.html">Historia</a></li>
-						<li><a href="./tecnica.html">Técnica Scout</a></li>
+						<li><a href="#">Técnica Scout</a>
+							<ul>
+								<li><a href="./nudos.html">Nudos</a></li>
+								<li><a href="./amarres.html">Amarres</a></li>
+								<li><a href="./campismo.html">Campismo</a></li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 				<li><a href="../index.html">Novedades y Eventos</a></li>
@@ -165,6 +171,15 @@
 					<p>Del 1 al 9 de agosto de 1907, se realizó el primer campamento scout, en la <a href="https://es.wikipedia.org/wiki/Isla_de_Brownsea" target="_blank">isla de Brownsea</a>, en la Bahía de Poole, Dorset.</p>
 
 					<p>Escogió a 20 muchachos de entre 12 y 17 años, algunos eran hijos de militares británicos, y los organizó en cuatro patrullas, denominadas "lobos", "toros", "chorlitos" y "cuervos"; les entregó, como distintivo, una cinta azul, una verde, una amarilla y una roja, respectivamente.</p>
+					<div class="frase">
+						<p>En la historia se han hecho investigaciones sobre el primer campamento y se encontraron con la sorpresa de que la patrulla "chorlitos" nunca existió. La patrulla se denominó ‘Zarapitos’ (Curlew), un ave de pico curvo bastante diferente, aunque se tradujo mal al castellano en su momento y se ha mantenido el error en el tiempo.</p>
+						<section>
+							<div class="img">
+								<img src="../img/traduccion.png" alt="Imagen de la traducción de Curlew">
+							</div>
+						</section>
+						<p>Fuente <a href="https://blog.larocadelconsejo.net/?s=chorlitos" target="_blank">aquí</a></p>
+					</div>
 					<details><summary>Seguir Leyendo</summary>
 						<p>El itinerario general era levantarse temprano (al sonido del <a href="http://www.scoutsbitacora.org/cuerno_kudu" target="_blank">cuerno de Kudu</a>, un trofeo de guerra de Baden-Powell tomado del jefe matabel Siginyamatsche),30​ practicar ejercicio físico, cocinar la propia comida, recorrer la naturaleza para observar animales y pájaros, hacer grandes juegos, levantar construcciones rústicas, aprender a hacer nudos y amarres.</p>
 
