--- a/links/mision.html
+++ b/links/mision.html
@@ -33,7 +33,13 @@
 					<ul>
 						<li><a href="./fundador.html">Fundador</a></li>
 						<li><a href="./historiascout.html">Historia</a></li>
-						<li><a href="./tecnica.html">Técnica Scout</a></li>
+						<li><a href="#">Técnica Scout</a>
+							<ul>
+								<li><a href="./nudos.html">Nudos</a></li>
+								<li><a href="./amarres.html">Amarres</a></li>
+								<li><a href="./campismo.html">Campismo</a></li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 				<li><a href="../index.html">Novedades y Eventos</a></li>
