--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
 								</div>
 								<button class="button om" onclick="om(2)">Leer más</button>
 								<p class="acargo">Jefatura</p>
+								<a href="./periodico/volumen1.pdf">Periodico</a>
 							</div>
 						</div>
 					</div>
